--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -7,3 +7,6 @@ ACCESS_TOKEN_SECRET=""
 ACCESS_TOKEN_EXPIRY=""
 REFRESH_TOKEN_SECRET=""
 REFRESH_TOKEN_EXPIRY=""
+NODEMAILER_PASS=""
+NODEMAILER_USER=""
+BASE_URL=""
