--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.12.2",
     "daisyui": "^5.1.25",
+    "gsap": "^3.13.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.63.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.3",
     "react-toastify": "^11.0.5",
     "socket.io-client": "^4.8.1",
